@@ -1,3 +1,7 @@
+2007-04-03  Kyle Galloway  <kgallowa@redhat.com>
+
+	* gnu/classpath/jdwp/value/ArrayValue.java: New file. 
+
 2007-04-03  Roman Kennke  <roman@kennke.org>
 
 	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkToolkit.c
